--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
                     <processTypes>
                         <!-- Tell Heroku how to launch your application -->
                         <!-- You might have to remove the ./ in front   -->
-                        <web>java -jar target/tesisul-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
+                        <web>java -jar ./target/tesisul-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
                     </processTypes>
                 </configuration>
             </plugin>
