--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.5.4</version>
-        </dependency>
+            <version>2.5.4</version> </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-debug-tools</artifactId>
